syntax = "proto3";
package plant;

service PlantService {
    // Insert item
    rpc Add(Plant) returns (PlantResponse);  // add plant

    // Remove item(s) from the inventory
    rpc Remove(PlantIdentifier) returns (PlantResponse);  // remove plant

    // Get item info
    rpc Get(PlantIdentifier) returns (Plant);  // get plant health check/id 

    // Increase/decrease an item's stock quantity
    rpc UpdatePlant(PlantUpdateRequest) returns (PlantUpdateResponse);  // update plant schedule/health check/id

    // Stream Item updates from the inventory
    // rpc Watch(PlantIdentifier) returns (stream Plant);  // remove
}

message Plant {
    PlantIdentifier identifier = 1;
    optional PlantInformation information = 3;
}

message PlantIdentifier {
    string sku = 2;
}

message PlantInformation {
    optional string name = 1;
    optional int64 lastWatered = 2;
    optional int64 lastHealthCheck = 3;
    optional int64 lastIdentification = 4;
}

message PlantUpdateRequest {
    string sku = 1;
    int32 change = 2;
}

message PlantResponse {
    string status = 1;
}

message PlantUpdateResponse {
    string status = 1;
}